// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatizeSeuAtendimento should match the snapshot for the AutomatizeSeuAtendimento component 1`] = `
<DocumentFragment>
  <main
    class="w-full bg-surface-subtle px-5 md:px-10 lg:px-20 pt-6 md:pt-10 pb-32 md:pb-20"
    id="teste-gratuitamente"
  >
    <header
      class="flex items-center justify-between max-w-7xl mx-auto mb-6 md:mb-12"
    >
      <img
        alt="Agenda Bela"
        class="h-auto w-[120px] md:w-[150px]"
        data-nimg="1"
        decoding="async"
        height="40"
        src="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=384&q=75"
        srcset="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=256&q=75 1x, /_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=384&q=75 2x"
        style="color: transparent;"
        width="140"
      />
      <span
        class="hidden md:inline font-mono-brand text-[10px] tracking-[2px] uppercase text-brand-vinho"
      >
        por Tudo Agenda
      </span>
    </header>
    <section
      class="relative max-w-7xl mx-auto overflow-hidden rounded-app-xl bg-brand-creme shadow-brand-md"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none absolute -right-24 -bottom-24 h-72 w-72 md:h-80 md:w-80 rounded-full bg-brand-rosa-claro opacity-40"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none absolute -left-32 -top-32 h-56 w-56 md:h-64 md:w-64 rounded-full bg-brand-creme-soft opacity-60"
      />
      <div
        class="relative grid grid-cols-1 lg:grid-cols-[1.1fr_1fr] gap-8 lg:gap-16 p-6 md:p-12 lg:p-16 items-center"
      >
        <div
          class="flex flex-col gap-5 md:gap-7"
        >
          <span
            class="font-mono-brand text-[11px] tracking-[2px] uppercase text-brand-vinho"
          >
            A secretária do seu salão
          </span>
          <h1
            class="font-fraunces italic font-normal text-brand-petroleo text-[38px] leading-[40px] md:text-[60px] md:leading-[62px] lg:text-[68px] lg:leading-[68px] tracking-[-0.035em] max-w-[18ch]"
          >
            Tem alguém cuidando da sua agenda agora.
          </h1>
          <p
            class="font-inter text-ink-muted text-[16px] leading-[24px] md:text-[18px] md:leading-[28px] max-w-[44ch]"
          >
            A gente avisa seu cliente no WhatsApp toda vez que ele agenda, e lembra ele no dia. Você recebe a agenda do dia direto no celular. Você fica com o que faz melhor: 
            <span
              class="text-brand-petroleo font-medium"
            >
              atender bem
            </span>
            .
          </p>
          <ul
            class="flex flex-col gap-2.5 -mt-1"
          >
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Confirmação automática no WhatsApp do cliente
              </span>
            </li>
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Lembrete pro cliente no dia do horário
              </span>
            </li>
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Agenda do dia direto no seu celular toda manhã
              </span>
            </li>
          </ul>
          <div
            class="hidden md:flex flex-col gap-3 bg-white rounded-app-lg shadow-brand-md p-5 max-w-xl"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-ink-muted"
            >
              Comece em 30 segundos
            </span>
            <div
              class="flex flex-col md:flex-row gap-2 w-full"
            >
              <div
                class="h-11 bg-surface-alt-card animate-pulse rounded-full flex-1"
              />
              <div
                class="h-11 bg-brand-rosa/40 animate-pulse rounded-full md:w-44"
              />
            </div>
            <p
              class="font-inter text-[12px] leading-[18px] text-ink-muted"
            >
              <strong
                class="font-inter font-semibold text-ink"
              >
                30 dias grátis.
              </strong>
               Cancela quando quiser.
            </p>
          </div>
        </div>
        <div
          class="relative h-[400px] sm:h-[520px] lg:h-[580px]"
        >
          <div
            class="absolute inset-0"
          >
            <div
              class="relative w-full h-full flex items-center justify-end sm:justify-center pr-2 sm:pr-0"
            >
              <div
                class="absolute left-0 lg:left-4 top-2 z-10 w-[140px] sm:w-[160px] lg:w-[180px] aspect-[9/19] animate-float-soft hidden sm:block"
                style="--card-rotate: -8deg; animation-delay: 0s;"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <img
                      alt="Tela de agenda do dia com horários"
                      class="object-cover object-top"
                      data-nimg="fill"
                      decoding="async"
                      sizes="(max-width: 768px) 180px, 200px"
                      src="/_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=3840&q=75"
                      srcset="/_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=3840&q=75 3840w"
                      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="relative z-20 w-[200px] sm:w-[240px] lg:w-[260px] aspect-[9/19.5]"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <div
                      class="absolute inset-0"
                    >
                      <div
                        class="screen-scroll relative w-full h-full"
                      >
                        <img
                          alt="Tela inicial do Agenda Bela com agenda do dia e estatísticas"
                          class="object-cover object-top !h-auto"
                          data-nimg="fill"
                          decoding="async"
                          sizes="(max-width: 768px) 220px, 280px"
                          src="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75"
                          srcset="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75 3840w"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="absolute right-0 lg:right-2 bottom-2 z-10 w-[140px] sm:w-[160px] lg:w-[180px] aspect-[9/19] animate-float-soft hidden sm:block"
                style="--card-rotate: 8deg; animation-delay: 1.5s;"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <img
                      alt="Tela de calendário mensal com agendamentos marcados"
                      class="object-cover object-top"
                      data-nimg="fill"
                      decoding="async"
                      sizes="(max-width: 768px) 180px, 200px"
                      src="/_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=3840&q=75"
                      srcset="/_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=3840&q=75 3840w"
                      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute z-10 -left-2 sm:-left-4 lg:-left-8 bottom-2 sm:bottom-auto sm:top-4 scale-[0.6] sm:scale-100 origin-bottom-left sm:origin-top-left animate-float-soft"
            style="--card-rotate: -3deg; animation-delay: 0.5s;"
          >
            <div
              class="w-[260px] rounded-[18px] overflow-hidden shadow-brand-lg bg-white"
            >
              <div
                class="flex items-center gap-2.5 bg-[#075E54] px-3 py-2.5"
              >
                <span
                  class="text-white text-[16px] leading-none"
                >
                  ‹
                </span>
                <div
                  class="h-7 w-7 rounded-full bg-brand-rosa-claro flex items-center justify-center text-brand-petroleo font-fraunces italic text-[11px] font-semibold"
                >
                  SE
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <p
                    class="font-inter text-[12.5px] font-semibold text-white leading-tight truncate"
                  >
                    Salão Estilo
                  </p>
                  <p
                    class="font-inter text-[9.5px] text-white/70 leading-tight"
                  >
                    online
                  </p>
                </div>
                <span
                  class="text-white/80 text-[12px]"
                >
                  ⋮
                </span>
              </div>
              <div
                class="relative px-3 py-4 flex flex-col gap-2 min-h-[260px]"
                style="background-color: rgb(236, 229, 221); background-size: 24px 24px, 32px 32px, 20px 20px;"
              >
                <div
                  class="flex justify-center mb-1"
                >
                  <span
                    class="bg-white/90 rounded-md px-2 py-0.5 font-inter text-[9.5px] text-[#54656F]"
                  >
                    HOJE
                  </span>
                </div>
                <div
                  class="wa-msg-in self-start max-w-[88%] rounded-[8px] rounded-tl-[2px] bg-white px-2.5 py-1.5"
                  style="animation-delay: 0.4s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                >
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21]"
                  >
                    Oi Camila! ✨ Seu agendamento foi confirmado:
                  </p>
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21] font-semibold mt-1"
                  >
                    Manicure com Paula
                    <br />
                    amanhã (sex), 15h
                  </p>
                  <p
                    class="font-inter text-[11.5px] leading-[16px] text-[#111B21] mt-1.5"
                  >
                    Te esperamos! 💜
                  </p>
                  <span
                    class="block text-right font-inter text-[9px] text-[#667781] mt-0.5"
                  >
                    14:32
                  </span>
                </div>
                <div
                  class="wa-msg-in self-start max-w-[88%] rounded-[8px] rounded-tl-[2px] bg-white px-2.5 py-1.5"
                  style="animation-delay: 1.6s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                >
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21]"
                  >
                    🔔 Bom dia, Camila!
                  </p>
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21] mt-1"
                  >
                    Lembrando que hoje você tem horário às 
                    <strong>
                      15h
                    </strong>
                     com a Paula.
                  </p>
                  <span
                    class="block text-right font-inter text-[9px] text-[#667781] mt-0.5"
                  >
                    07:00
                  </span>
                </div>
              </div>
              <div
                class="flex items-center gap-2 bg-[#F0F2F5] px-2 py-1.5"
              >
                <div
                  class="flex-1 rounded-full bg-white h-7 px-3 flex items-center"
                >
                  <span
                    class="font-inter text-[10.5px] text-[#667781]"
                  >
                    Mensagem
                  </span>
                </div>
                <div
                  class="h-7 w-7 rounded-full bg-[#075E54] flex items-center justify-center text-white text-[11px]"
                >
                  🎤
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
  <div
    class="md:hidden fixed bottom-3 left-3 right-3 bg-white rounded-app-xl shadow-brand-lg p-4 z-30"
  >
    <div
      class="flex flex-col gap-2.5"
    >
      <div
        class="flex flex-col md:flex-row gap-2 w-full"
      >
        <div
          class="h-11 bg-surface-alt-card animate-pulse rounded-full flex-1"
        />
        <div
          class="h-11 bg-brand-rosa/40 animate-pulse rounded-full md:w-44"
        />
      </div>
      <p
        class="font-inter text-[11px] leading-[15px] text-ink-muted text-center"
      >
        <strong
          class="font-inter font-semibold text-ink"
        >
          30 dias grátis.
        </strong>
         Cancela quando quiser.
      </p>
    </div>
  </div>
  <div
    class="h-64 bg-surface-subtle animate-pulse"
  />
  <div
    class="h-64 bg-brand-creme-soft animate-pulse"
  />
  <div
    class="h-64 bg-surface-subtle animate-pulse"
  />
  <div
    class="h-32 bg-gray-100 animate-pulse rounded"
  />
  <div
    class="h-32 bg-gray-100 animate-pulse rounded"
  />
</DocumentFragment>
`;

exports[`AutomatizeSeuAtendimento should match the snapshot for the Layout with AutomatizeSeuAtendimento 1`] = `
<DocumentFragment>
  <main
    class="w-full bg-surface-subtle px-5 md:px-10 lg:px-20 pt-6 md:pt-10 pb-32 md:pb-20"
    id="teste-gratuitamente"
  >
    <header
      class="flex items-center justify-between max-w-7xl mx-auto mb-6 md:mb-12"
    >
      <img
        alt="Agenda Bela"
        class="h-auto w-[120px] md:w-[150px]"
        data-nimg="1"
        decoding="async"
        height="40"
        src="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=384&q=75"
        srcset="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=256&q=75 1x, /_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=384&q=75 2x"
        style="color: transparent;"
        width="140"
      />
      <span
        class="hidden md:inline font-mono-brand text-[10px] tracking-[2px] uppercase text-brand-vinho"
      >
        por Tudo Agenda
      </span>
    </header>
    <section
      class="relative max-w-7xl mx-auto overflow-hidden rounded-app-xl bg-brand-creme shadow-brand-md"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none absolute -right-24 -bottom-24 h-72 w-72 md:h-80 md:w-80 rounded-full bg-brand-rosa-claro opacity-40"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none absolute -left-32 -top-32 h-56 w-56 md:h-64 md:w-64 rounded-full bg-brand-creme-soft opacity-60"
      />
      <div
        class="relative grid grid-cols-1 lg:grid-cols-[1.1fr_1fr] gap-8 lg:gap-16 p-6 md:p-12 lg:p-16 items-center"
      >
        <div
          class="flex flex-col gap-5 md:gap-7"
        >
          <span
            class="font-mono-brand text-[11px] tracking-[2px] uppercase text-brand-vinho"
          >
            A secretária do seu salão
          </span>
          <h1
            class="font-fraunces italic font-normal text-brand-petroleo text-[38px] leading-[40px] md:text-[60px] md:leading-[62px] lg:text-[68px] lg:leading-[68px] tracking-[-0.035em] max-w-[18ch]"
          >
            Tem alguém cuidando da sua agenda agora.
          </h1>
          <p
            class="font-inter text-ink-muted text-[16px] leading-[24px] md:text-[18px] md:leading-[28px] max-w-[44ch]"
          >
            A gente avisa seu cliente no WhatsApp toda vez que ele agenda, e lembra ele no dia. Você recebe a agenda do dia direto no celular. Você fica com o que faz melhor: 
            <span
              class="text-brand-petroleo font-medium"
            >
              atender bem
            </span>
            .
          </p>
          <ul
            class="flex flex-col gap-2.5 -mt-1"
          >
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Confirmação automática no WhatsApp do cliente
              </span>
            </li>
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Lembrete pro cliente no dia do horário
              </span>
            </li>
            <li
              class="flex items-start gap-2.5 font-inter text-[14.5px] text-ink"
            >
              <span
                class="inline-flex h-5 w-5 mt-0.5 items-center justify-center rounded-full bg-brand-rosa-50 text-brand-rosa font-bold text-[12px]"
              >
                ✓
              </span>
              <span>
                Agenda do dia direto no seu celular toda manhã
              </span>
            </li>
          </ul>
          <div
            class="hidden md:flex flex-col gap-3 bg-white rounded-app-lg shadow-brand-md p-5 max-w-xl"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-ink-muted"
            >
              Comece em 30 segundos
            </span>
            <form
              class="flex flex-col md:flex-row md:items-stretch md:gap-0 gap-2 w-full max-w-lg"
            >
              <input
                class="flex w-full border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-11 font-inter rounded-full md:rounded-l-full md:rounded-r-none md:border-r-0"
                name="email"
                placeholder="Seu melhor email"
                required=""
                type="email"
              />
              <button
                class="inline-flex items-center justify-center gap-2 text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-brand-rosa text-white hover:bg-brand-rosa-hover font-inter font-semibold h-11 px-8 rounded-full md:rounded-r-full md:rounded-l-none whitespace-nowrap"
                type="submit"
              >
                Começar com 30 dias grátis
              </button>
            </form>
            <p
              class="font-inter text-[12px] leading-[18px] text-ink-muted"
            >
              <strong
                class="font-inter font-semibold text-ink"
              >
                30 dias grátis.
              </strong>
               Cancela quando quiser.
            </p>
          </div>
        </div>
        <div
          class="relative h-[400px] sm:h-[520px] lg:h-[580px]"
        >
          <div
            class="absolute inset-0"
          >
            <div
              class="relative w-full h-full flex items-center justify-end sm:justify-center pr-2 sm:pr-0"
            >
              <div
                class="absolute left-0 lg:left-4 top-2 z-10 w-[140px] sm:w-[160px] lg:w-[180px] aspect-[9/19] animate-float-soft hidden sm:block"
                style="--card-rotate: -8deg; animation-delay: 0s;"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <img
                      alt="Tela de agenda do dia com horários"
                      class="object-cover object-top"
                      data-nimg="fill"
                      decoding="async"
                      sizes="(max-width: 768px) 180px, 200px"
                      src="/_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=3840&q=75"
                      srcset="/_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fagenda-dia.jpeg&w=3840&q=75 3840w"
                      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="relative z-20 w-[200px] sm:w-[240px] lg:w-[260px] aspect-[9/19.5]"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <div
                      class="absolute inset-0"
                    >
                      <div
                        class="screen-scroll relative w-full h-full"
                      >
                        <img
                          alt="Tela inicial do Agenda Bela com agenda do dia e estatísticas"
                          class="object-cover object-top !h-auto"
                          data-nimg="fill"
                          decoding="async"
                          sizes="(max-width: 768px) 220px, 280px"
                          src="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75"
                          srcset="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75 3840w"
                          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="absolute right-0 lg:right-2 bottom-2 z-10 w-[140px] sm:w-[160px] lg:w-[180px] aspect-[9/19] animate-float-soft hidden sm:block"
                style="--card-rotate: 8deg; animation-delay: 1.5s;"
              >
                <div
                  class="relative rounded-[36px] bg-brand-petroleo shadow-brand-lg p-2 h-full"
                >
                  <div
                    class="relative h-full w-full rounded-[28px] overflow-hidden bg-surface-subtle"
                  >
                    <img
                      alt="Tela de calendário mensal com agendamentos marcados"
                      class="object-cover object-top"
                      data-nimg="fill"
                      decoding="async"
                      sizes="(max-width: 768px) 180px, 200px"
                      src="/_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=3840&q=75"
                      srcset="/_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fagenda-mes.jpeg&w=3840&q=75 3840w"
                      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute z-10 -left-2 sm:-left-4 lg:-left-8 bottom-2 sm:bottom-auto sm:top-4 scale-[0.6] sm:scale-100 origin-bottom-left sm:origin-top-left animate-float-soft"
            style="--card-rotate: -3deg; animation-delay: 0.5s;"
          >
            <div
              class="w-[260px] rounded-[18px] overflow-hidden shadow-brand-lg bg-white"
            >
              <div
                class="flex items-center gap-2.5 bg-[#075E54] px-3 py-2.5"
              >
                <span
                  class="text-white text-[16px] leading-none"
                >
                  ‹
                </span>
                <div
                  class="h-7 w-7 rounded-full bg-brand-rosa-claro flex items-center justify-center text-brand-petroleo font-fraunces italic text-[11px] font-semibold"
                >
                  SE
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <p
                    class="font-inter text-[12.5px] font-semibold text-white leading-tight truncate"
                  >
                    Salão Estilo
                  </p>
                  <p
                    class="font-inter text-[9.5px] text-white/70 leading-tight"
                  >
                    online
                  </p>
                </div>
                <span
                  class="text-white/80 text-[12px]"
                >
                  ⋮
                </span>
              </div>
              <div
                class="relative px-3 py-4 flex flex-col gap-2 min-h-[260px]"
                style="background-color: rgb(236, 229, 221); background-size: 24px 24px, 32px 32px, 20px 20px;"
              >
                <div
                  class="flex justify-center mb-1"
                >
                  <span
                    class="bg-white/90 rounded-md px-2 py-0.5 font-inter text-[9.5px] text-[#54656F]"
                  >
                    HOJE
                  </span>
                </div>
                <div
                  class="wa-msg-in self-start max-w-[88%] rounded-[8px] rounded-tl-[2px] bg-white px-2.5 py-1.5"
                  style="animation-delay: 0.4s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                >
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21]"
                  >
                    Oi Camila! ✨ Seu agendamento foi confirmado:
                  </p>
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21] font-semibold mt-1"
                  >
                    Manicure com Paula
                    <br />
                    amanhã (sex), 15h
                  </p>
                  <p
                    class="font-inter text-[11.5px] leading-[16px] text-[#111B21] mt-1.5"
                  >
                    Te esperamos! 💜
                  </p>
                  <span
                    class="block text-right font-inter text-[9px] text-[#667781] mt-0.5"
                  >
                    14:32
                  </span>
                </div>
                <div
                  class="wa-msg-in self-start max-w-[88%] rounded-[8px] rounded-tl-[2px] bg-white px-2.5 py-1.5"
                  style="animation-delay: 1.6s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                >
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21]"
                  >
                    🔔 Bom dia, Camila!
                  </p>
                  <p
                    class="font-inter text-[12px] leading-[17px] text-[#111B21] mt-1"
                  >
                    Lembrando que hoje você tem horário às 
                    <strong>
                      15h
                    </strong>
                     com a Paula.
                  </p>
                  <span
                    class="block text-right font-inter text-[9px] text-[#667781] mt-0.5"
                  >
                    07:00
                  </span>
                </div>
              </div>
              <div
                class="flex items-center gap-2 bg-[#F0F2F5] px-2 py-1.5"
              >
                <div
                  class="flex-1 rounded-full bg-white h-7 px-3 flex items-center"
                >
                  <span
                    class="font-inter text-[10.5px] text-[#667781]"
                  >
                    Mensagem
                  </span>
                </div>
                <div
                  class="h-7 w-7 rounded-full bg-[#075E54] flex items-center justify-center text-white text-[11px]"
                >
                  🎤
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
  <div
    class="md:hidden fixed bottom-3 left-3 right-3 bg-white rounded-app-xl shadow-brand-lg p-4 z-30"
  >
    <div
      class="flex flex-col gap-2.5"
    >
      <form
        class="flex flex-col md:flex-row md:items-stretch md:gap-0 gap-2 w-full max-w-lg"
      >
        <input
          class="flex w-full border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-11 font-inter rounded-full md:rounded-l-full md:rounded-r-none md:border-r-0"
          name="email"
          placeholder="Seu melhor email"
          required=""
          type="email"
        />
        <button
          class="inline-flex items-center justify-center gap-2 text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-brand-rosa text-white hover:bg-brand-rosa-hover font-inter font-semibold h-11 px-8 rounded-full md:rounded-r-full md:rounded-l-none whitespace-nowrap"
          type="submit"
        >
          Começar com 30 dias grátis
        </button>
      </form>
      <p
        class="font-inter text-[11px] leading-[15px] text-ink-muted text-center"
      >
        <strong
          class="font-inter font-semibold text-ink"
        >
          30 dias grátis.
        </strong>
         Cancela quando quiser.
      </p>
    </div>
  </div>
  <section
    class="w-full bg-surface-subtle px-5 md:px-10 lg:px-20 pt-10 pb-16 md:py-24"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="flex flex-col items-center gap-3 mb-10 md:mb-14 text-center"
      >
        <span
          class="font-mono-brand text-[11px] tracking-[2px] uppercase text-brand-vinho"
        >
          Sem complicação
        </span>
        <h2
          class="font-fraunces italic font-normal text-brand-petroleo text-[32px] leading-[34px] md:text-[44px] md:leading-[46px] tracking-[-0.025em] max-w-[18ch]"
        >
          Em 5 minutos a sua secretária tá trabalhando.
        </h2>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6"
      >
        <div
          class="relative flex flex-col gap-3 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 md:p-7"
        >
          <span
            class="inline-flex h-9 w-9 items-center justify-center rounded-full bg-brand-rosa text-white font-fraunces italic text-xl"
          >
            1
          </span>
          <h3
            class="font-fraunces italic font-normal text-brand-petroleo text-[22px] leading-[26px] tracking-[-0.015em]"
          >
            Cadastra seu salão em 5 minutos
          </h3>
          <p
            class="font-inter text-ink-muted text-[14.5px] leading-[22px]"
          >
            Pelo celular, sem complicação. Você cria os profissionais, os serviços com preço e duração, e pronto — tá no ar.
          </p>
        </div>
        <div
          class="relative flex flex-col gap-3 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 md:p-7"
        >
          <span
            class="inline-flex h-9 w-9 items-center justify-center rounded-full bg-brand-rosa text-white font-fraunces italic text-xl"
          >
            2
          </span>
          <h3
            class="font-fraunces italic font-normal text-brand-petroleo text-[22px] leading-[26px] tracking-[-0.015em]"
          >
            Marca agendamentos no app
          </h3>
          <p
            class="font-inter text-ink-muted text-[14.5px] leading-[22px]"
          >
            Toda vez que você marca um horário, o cliente recebe a confirmação no WhatsApp dele. Sem você apertar nada.
          </p>
        </div>
        <div
          class="relative flex flex-col gap-3 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 md:p-7"
        >
          <span
            class="inline-flex h-9 w-9 items-center justify-center rounded-full bg-brand-rosa text-white font-fraunces italic text-xl"
          >
            3
          </span>
          <h3
            class="font-fraunces italic font-normal text-brand-petroleo text-[22px] leading-[26px] tracking-[-0.015em]"
          >
            A gente cuida do dia a dia
          </h3>
          <p
            class="font-inter text-ink-muted text-[14.5px] leading-[22px]"
          >
            Toda manhã, seu cliente recebe o lembrete do horário do dia. Você acorda com a agenda pronta no celular.
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="w-full bg-brand-creme-soft px-5 md:px-10 lg:px-20 py-16 md:py-24"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="flex flex-col items-center gap-3 mb-10 md:mb-14 text-center"
      >
        <span
          class="font-mono-brand text-[11px] tracking-[2px] uppercase text-brand-vinho"
        >
          O que sua secretária faz
        </span>
        <h2
          class="font-fraunces italic font-normal text-brand-petroleo text-[32px] leading-[40px] md:text-[44px] md:leading-[52px] tracking-[-0.025em]"
        >
          <span
            class="block"
          >
            Cuida das mensagens
          </span>
          <span
            class="block"
          >
            Lembra dos horários
          </span>
          <span
            class="block"
          >
            Mostra o que importa
          </span>
        </h2>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-5 md:gap-8"
      >
        <article
          class="relative overflow-hidden rounded-app-xl bg-brand-creme shadow-brand-sm"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute -right-12 -bottom-12 h-40 w-40 rounded-full bg-brand-rosa-claro opacity-30"
          />
          <div
            class="relative flex flex-col gap-5 p-6 md:p-8"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-brand-vinho"
            >
              Confirmação automática
            </span>
            <h3
              class="font-fraunces italic font-normal text-brand-petroleo text-[24px] leading-[28px] md:text-[28px] md:leading-[32px] tracking-[-0.02em] max-w-[18ch]"
            >
              Avisa seu cliente no WhatsApp
            </h3>
            <p
              class="font-inter text-ink-muted text-[15px] leading-[24px] max-w-[40ch]"
            >
              Cada agendamento que você marca, a gente envia uma mensagem no WhatsApp do cliente confirmando. Sem ligar, sem digitar.
            </p>
            <div
              class="mt-2 flex justify-center md:justify-start"
            >
              <div
                class="rounded-[14px] overflow-hidden shadow-brand-md bg-white"
                style="width: 240px;"
              >
                <div
                  class="flex items-center gap-2 bg-[#075E54] px-2.5 py-2"
                >
                  <span
                    class="text-white text-[13px] leading-none"
                  >
                    ‹
                  </span>
                  <div
                    class="h-6 w-6 rounded-full bg-brand-rosa-claro flex items-center justify-center text-brand-petroleo font-fraunces italic text-[10px] font-semibold"
                  >
                    SE
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <p
                      class="font-inter text-[11px] font-semibold text-white leading-tight truncate"
                    >
                      Salão Estilo
                    </p>
                    <p
                      class="font-inter text-[8.5px] text-white/70 leading-tight"
                    >
                      online
                    </p>
                  </div>
                </div>
                <div
                  class="px-2.5 py-3 flex flex-col gap-1.5"
                  style="background-color: rgb(236, 229, 221); background-size: 24px 24px, 28px 28px;"
                >
                  <div
                    class="wa-msg-in self-start max-w-[90%] rounded-[7px] rounded-tl-[2px] bg-white px-2 py-1.5"
                    style="animation-delay: 0.4s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                  >
                    <div
                      class="font-inter text-[10.5px] leading-[14px] text-[#111B21]"
                    >
                      Oi Camila! ✨ Seu agendamento foi confirmado:
                      <br />
                      <strong>
                        Manicure com Paula
                      </strong>
                      <br />
                      amanhã (sex), 15h
                    </div>
                    <span
                      class="block text-right font-inter text-[8px] text-[#667781] mt-0.5"
                    >
                      14:32
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
        <article
          class="relative overflow-hidden rounded-app-xl bg-brand-creme-soft shadow-brand-sm"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute -right-12 -bottom-12 h-40 w-40 rounded-full bg-brand-rosa-claro opacity-30"
          />
          <div
            class="relative flex flex-col gap-5 p-6 md:p-8"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-brand-vinho"
            >
              Toda manhã, sem você lembrar
            </span>
            <h3
              class="font-fraunces italic font-normal text-brand-petroleo text-[24px] leading-[28px] md:text-[28px] md:leading-[32px] tracking-[-0.02em] max-w-[18ch]"
            >
              Você recebe a agenda do dia. Seu cliente recebe o lembrete dele.
            </h3>
            <p
              class="font-inter text-ink-muted text-[15px] leading-[24px] max-w-[40ch]"
            >
              Cedinho, antes do salão abrir, a gente manda no WhatsApp todos os horários do dia pra você — e lembra cada cliente do horário que ele marcou.
            </p>
            <div
              class="mt-2 flex flex-col sm:flex-row gap-3 items-center sm:items-start justify-center md:justify-start"
            >
              <div
                class="rounded-[14px] overflow-hidden shadow-brand-md bg-white"
                style="width: 232px;"
              >
                <div
                  class="flex items-center gap-2 bg-[#075E54] px-2.5 py-2"
                >
                  <span
                    class="text-white text-[13px] leading-none"
                  >
                    ‹
                  </span>
                  <div
                    class="h-6 w-6 rounded-full bg-brand-rosa-claro flex items-center justify-center text-brand-petroleo font-fraunces italic text-[10px] font-semibold"
                  >
                    SE
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <p
                      class="font-inter text-[11px] font-semibold text-white leading-tight truncate"
                    >
                      Salão Estilo · Você
                    </p>
                    <p
                      class="font-inter text-[8.5px] text-white/70 leading-tight"
                    >
                      online
                    </p>
                  </div>
                </div>
                <div
                  class="px-2.5 py-3 flex flex-col gap-1.5"
                  style="background-color: rgb(236, 229, 221); background-size: 24px 24px, 28px 28px;"
                >
                  <div
                    class="wa-msg-in self-start max-w-[90%] rounded-[7px] rounded-tl-[2px] bg-white px-2 py-1.5"
                    style="animation-delay: 0.4s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                  >
                    <div
                      class="font-inter text-[10.5px] leading-[14px] text-[#111B21]"
                    >
                      🌅 Bom dia, Salão Estilo!
                      <br />
                      <strong>
                        Sua agenda hoje (5 horários):
                      </strong>
                      <br />
                      • 09:00 — Maria · Manicure
                      <br />
                      • 10:30 — Joana · Sobrancelha
                      <br />
                      • 13:00 — Camila · Pedicure
                      <br />
                      • 15:00 — Luzinete · Manicure e pedicure
                      <br />
                      • 16:30 — Megui · Banho de petróleo
                    </div>
                    <span
                      class="block text-right font-inter text-[8px] text-[#667781] mt-0.5"
                    >
                      07:00
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="rounded-[14px] overflow-hidden shadow-brand-md bg-white"
                style="width: 232px;"
              >
                <div
                  class="flex items-center gap-2 bg-[#075E54] px-2.5 py-2"
                >
                  <span
                    class="text-white text-[13px] leading-none"
                  >
                    ‹
                  </span>
                  <div
                    class="h-6 w-6 rounded-full bg-brand-rosa-claro flex items-center justify-center text-brand-petroleo font-fraunces italic text-[10px] font-semibold"
                  >
                    CA
                  </div>
                  <div
                    class="flex-1 min-w-0"
                  >
                    <p
                      class="font-inter text-[11px] font-semibold text-white leading-tight truncate"
                    >
                      Camila · Cliente
                    </p>
                    <p
                      class="font-inter text-[8.5px] text-white/70 leading-tight"
                    >
                      online
                    </p>
                  </div>
                </div>
                <div
                  class="px-2.5 py-3 flex flex-col gap-1.5"
                  style="background-color: rgb(236, 229, 221); background-size: 24px 24px, 28px 28px;"
                >
                  <div
                    class="wa-msg-in self-start max-w-[90%] rounded-[7px] rounded-tl-[2px] bg-white px-2 py-1.5"
                    style="animation-delay: 0.4s; box-shadow: 0 1px 0.5px rgba(11,20,26,0.13);"
                  >
                    <div
                      class="font-inter text-[10.5px] leading-[14px] text-[#111B21]"
                    >
                      🔔 Bom dia, Camila!
                      <br />
                      Hoje você tem horário às 
                      <strong>
                        15h
                      </strong>
                       com a Paula 💜
                    </div>
                    <span
                      class="block text-right font-inter text-[8px] text-[#667781] mt-0.5"
                    >
                      07:00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
        <article
          class="relative overflow-hidden rounded-app-xl bg-brand-creme shadow-brand-sm"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute -right-12 -bottom-12 h-40 w-40 rounded-full bg-brand-rosa-claro opacity-30"
          />
          <div
            class="relative flex flex-col gap-5 p-6 md:p-8"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-brand-vinho"
            >
              Tela inicial do app
            </span>
            <h3
              class="font-fraunces italic font-normal text-brand-petroleo text-[24px] leading-[28px] md:text-[28px] md:leading-[32px] tracking-[-0.02em] max-w-[18ch]"
            >
              Te entrega o dia pronto, no celular
            </h3>
            <p
              class="font-inter text-ink-muted text-[15px] leading-[24px] max-w-[40ch]"
            >
              Você acorda e abre o app: aparece quanto vai entrar hoje, quantos clientes tem, quem é o próximo. Sem caderno, sem planilha.
            </p>
            <div
              class="mt-2 flex justify-center md:justify-start"
            >
              <div
                class="relative w-[180px] md:w-[200px] aspect-[9/19.5] rounded-[28px] bg-brand-petroleo shadow-brand-md p-2"
              >
                <div
                  class="relative h-full w-full rounded-[20px] overflow-hidden bg-surface-subtle"
                >
                  <img
                    alt="Dashboard do app com agenda do dia"
                    class="object-cover object-top"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="200px"
                    src="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Fdashboard-full.jpeg&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
              </div>
            </div>
          </div>
        </article>
        <article
          class="relative overflow-hidden rounded-app-xl bg-brand-creme-soft shadow-brand-sm"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute -right-12 -bottom-12 h-40 w-40 rounded-full bg-brand-rosa-claro opacity-30"
          />
          <div
            class="relative flex flex-col gap-5 p-6 md:p-8"
          >
            <span
              class="font-mono-brand text-[10px] tracking-[1.8px] uppercase text-brand-vinho"
            >
              Painel completo
            </span>
            <h3
              class="font-fraunces italic font-normal text-brand-petroleo text-[24px] leading-[28px] md:text-[28px] md:leading-[32px] tracking-[-0.02em] max-w-[18ch]"
            >
              Mostra o que importa do salão
            </h3>
            <p
              class="font-inter text-ink-muted text-[15px] leading-[24px] max-w-[40ch]"
            >
              Faturamento do mês, dias mais movimentados, serviços que mais saem, ranking dos profissionais. Tudo num toque.
            </p>
            <div
              class="mt-2 flex justify-center md:justify-start"
            >
              <div
                class="relative w-[160px] md:w-[180px] aspect-[9/19] rounded-[24px] bg-brand-petroleo shadow-brand-md p-1.5"
              >
                <div
                  class="relative h-full w-full rounded-[18px] overflow-hidden bg-surface-subtle"
                >
                  <img
                    alt="Tela financeira com gráfico de receita"
                    class="object-cover object-top"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    sizes="180px"
                    src="/_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=16&q=75 16w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=32&q=75 32w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=48&q=75 48w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=64&q=75 64w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=96&q=75 96w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=128&q=75 128w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=256&q=75 256w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=384&q=75 384w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=640&q=75 640w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=750&q=75 750w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=828&q=75 828w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=1080&q=75 1080w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=1200&q=75 1200w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=1920&q=75 1920w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=2048&q=75 2048w, /_next/image?url=%2Fapp-screens%2Ffinanceiro-faturamento.jpeg&w=3840&q=75 3840w"
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
              </div>
            </div>
          </div>
        </article>
      </div>
    </div>
  </section>
  <section
    class="w-full bg-surface-subtle px-5 md:px-10 lg:px-20 py-16 md:py-24"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="flex flex-col items-center gap-3 mb-10 md:mb-14 text-center"
      >
        <span
          class="font-mono-brand text-[11px] tracking-[2px] uppercase text-brand-vinho"
        >
          Quem já tem secretária
        </span>
        <h2
          class="font-fraunces italic font-normal text-brand-petroleo text-[32px] leading-[36px] md:text-[44px] md:leading-[48px] tracking-[-0.025em] max-w-[22ch]"
        >
          Donas de salão que dormem mais tranquilas.
        </h2>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-5"
      >
        <article
          class="flex flex-col gap-4 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 border border-surface-alt-border"
        >
          <span
            aria-hidden="true"
            class="font-fraunces italic text-brand-rosa text-[40px] leading-none -mb-2 -ml-1"
          >
            “
          </span>
          <blockquote
            class="font-fraunces italic text-brand-petroleo text-[16px] leading-[24px] tracking-[-0.005em] flex-1"
          >
            Antes vivia esquecendo de confirmar horário com cliente. Agora chega tudo no WhatsApp delas automático. Meu no-show caiu pela metade no primeiro mês.
          </blockquote>
          <div
            class="font-inter text-[13px] leading-[18px] border-t border-surface-alt-border pt-3"
          >
            <p
              class="font-semibold text-ink"
            >
              Mariana Helena
            </p>
            <p
              class="text-ink-muted"
            >
              Salão Bela Mari
            </p>
            <p
              class="text-ink-subtle text-[12px] mt-0.5"
            >
              Sorocaba — SP
            </p>
          </div>
        </article>
        <article
          class="flex flex-col gap-4 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 border border-surface-alt-border"
        >
          <span
            aria-hidden="true"
            class="font-fraunces italic text-brand-rosa text-[40px] leading-none -mb-2 -ml-1"
          >
            “
          </span>
          <blockquote
            class="font-fraunces italic text-brand-petroleo text-[16px] leading-[24px] tracking-[-0.005em] flex-1"
          >
            Comecei usando só pra receber lembrete da agenda do dia. Em uma semana já tava economizando uma hora por dia que eu gastava respondendo WhatsApp.
          </blockquote>
          <div
            class="font-inter text-[13px] leading-[18px] border-t border-surface-alt-border pt-3"
          >
            <p
              class="font-semibold text-ink"
            >
              Carla Andrade
            </p>
            <p
              class="text-ink-muted"
            >
              Studio Carla
            </p>
            <p
              class="text-ink-subtle text-[12px] mt-0.5"
            >
              Ribeirão Preto — SP
            </p>
          </div>
        </article>
        <article
          class="flex flex-col gap-4 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 border border-surface-alt-border"
        >
          <span
            aria-hidden="true"
            class="font-fraunces italic text-brand-rosa text-[40px] leading-none -mb-2 -ml-1"
          >
            “
          </span>
          <blockquote
            class="font-fraunces italic text-brand-petroleo text-[16px] leading-[24px] tracking-[-0.005em] flex-1"
          >
            Eu não sabia exatamente quanto faturava no dia. Hoje abro o app de manhã, vejo o número e a agenda pronta. Mudou minha cabeça sobre o negócio.
          </blockquote>
          <div
            class="font-inter text-[13px] leading-[18px] border-t border-surface-alt-border pt-3"
          >
            <p
              class="font-semibold text-ink"
            >
              Patrícia Ramos
            </p>
            <p
              class="text-ink-muted"
            >
              Espaço Patty
            </p>
            <p
              class="text-ink-subtle text-[12px] mt-0.5"
            >
              Curitiba — PR
            </p>
          </div>
        </article>
        <article
          class="flex flex-col gap-4 bg-surface-alt-card rounded-app-lg shadow-brand-xs p-6 border border-surface-alt-border"
        >
          <span
            aria-hidden="true"
            class="font-fraunces italic text-brand-rosa text-[40px] leading-none -mb-2 -ml-1"
          >
            “
          </span>
          <blockquote
            class="font-fraunces italic text-brand-petroleo text-[16px] leading-[24px] tracking-[-0.005em] flex-1"
          >
            O cadastro do salão levou uns 5 minutos mesmo. Cadastrei minha filha como profissional e os serviços, e no mesmo dia já tava marcando agendamento.
          </blockquote>
          <div
            class="font-inter text-[13px] leading-[18px] border-t border-surface-alt-border pt-3"
          >
            <p
              class="font-semibold text-ink"
            >
              Juliana Costa
            </p>
            <p
              class="text-ink-muted"
            >
              Beleza & Cia
            </p>
            <p
              class="text-ink-subtle text-[12px] mt-0.5"
            >
              Campinas — SP
            </p>
          </div>
        </article>
      </div>
    </div>
  </section>
  <div
    class="flex flex-col items-center w-full px-8 md:px-16 py-16"
  >
    <div
      class="flex flex-col md:flex-row gap-8 p-12 w-full max-w-7xl border-y border-y-purple-200 items-center justify-center"
    >
      <img
        alt="Santander X logo"
        data-nimg="1"
        decoding="async"
        height="27"
        loading="lazy"
        src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="200"
      />
      <img
        alt="Founders Club logo"
        data-nimg="1"
        decoding="async"
        height="80"
        loading="lazy"
        src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
        style="color: transparent;"
        width="141"
      />
    </div>
  </div>
  <footer
    class="w-full bg-surface-subtle px-5 md:px-10 lg:px-20 py-10 md:py-12 border-t border-surface-alt-border"
  >
    <div
      class="max-w-7xl mx-auto flex flex-col md:flex-row items-center md:items-start justify-between gap-6"
    >
      <div
        class="flex flex-col items-center md:items-start gap-2"
      >
        <img
          alt="Agenda Bela"
          class="h-auto w-[120px]"
          data-nimg="1"
          decoding="async"
          height="36"
          loading="lazy"
          src="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=256&q=75"
          srcset="/_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=128&q=75 1x, /_next/image?url=%2Fbrand%2Flogo-wine-cream.png&w=256&q=75 2x"
          style="color: transparent;"
          width="120"
        />
        <span
          class="font-mono-brand text-[10px] tracking-[2px] uppercase text-brand-vinho"
        >
          por Tudo Agenda
        </span>
      </div>
      <nav
        class="flex flex-col md:flex-row gap-3 md:gap-6 items-center"
      >
        <a
          class="font-inter text-[13px] text-ink-muted hover:text-brand-petroleo transition-colors"
          href="/termos"
        >
          Termos de serviço
        </a>
        <a
          class="font-inter text-[13px] text-ink-muted hover:text-brand-petroleo transition-colors"
          href="/privacidade"
        >
          Política de privacidade
        </a>
        <a
          class="font-inter text-[13px] text-ink-muted hover:text-brand-petroleo transition-colors"
          href="mailto:contato@tudoagenda.com.br"
        >
          contato@tudoagenda.com.br
        </a>
      </nav>
    </div>
    <p
      class="text-center md:text-left font-inter text-[11px] text-ink-subtle mt-8"
    >
      © 2026 Tudo Agenda. Todos os direitos reservados.
    </p>
  </footer>
</DocumentFragment>
`;
